--- a/public/links/index.html
+++ b/public/links/index.html
@@ -532,7 +532,13 @@ a.link--external:last-child::after {
   
     class="link--external" target="_blank" rel="noreferrer"
   
->昼河万里</a></p>
+>昼河万里</a> <a
+  href="https://sanguok.com/"
+  
+  
+    class="link--external" target="_blank" rel="noreferrer"
+  
+>山月</a></p>
 </li>
 <li>
 <p><a
@@ -571,12 +577,6 @@ a.link--external:last-child::after {
 </li>
 <li>
 <p><a
-  href="https://sanguok.com/"
-  
-  
-    class="link--external" target="_blank" rel="noreferrer"
-  
->山月</a><a
   href="https://naturaleki.one/"
   
   
@@ -594,22 +594,19 @@ a.link--external:last-child::after {
   
     class="link--external" target="_blank" rel="noreferrer"
   
->Velas电波站</a></p>
-</li>
-<li>
-<p><a
-  href="https://www.rouroupuppy.top/"
-  
-  
-    class="link--external" target="_blank" rel="noreferrer"
-  
->让黑夜划满星</a> <a
+>Velas电波站</a> <a
   href="https://banshou-air.netlify.app/"
   
   
     class="link--external" target="_blank" rel="noreferrer"
   
->夜航南飞</a></p>
+>夜航南飞</a> <a
+  href="https://www.rouroupuppy.top/"
+  
+  
+    class="link--external" target="_blank" rel="noreferrer"
+  
+>让黑夜划满星</a></p>
 </li>
 </ul>
 <p>喜欢大家，爱看大家，通过RSS猛猛地订阅了大家
