--- a/public/links/index.html
+++ b/public/links/index.html
@@ -712,8 +712,10 @@ document.addEventListener("DOMContentLoaded", function() {
 </li>
 <li>
 <p><a
-  href="kawa1planet.fun"
+  href="https://kawa1planet.fun/"
   
+  
+    class="link--external" target="_blank" rel="noreferrer"
   
 >Kawa1Planet</a> / 是一位武侠同人女友友但是卡哇1星球里什么都有！！！你也喜欢卡哇1那我们就是志同道合的伙伴了。</p>
 </li>
